# Health-chain-stellar

./: ACCESSIBILITY_COMPLETION_REPORT.md  ACCESSIBILITY_IMPLEMENTATION_GUIDE.md  BLOOD_UNIT_INDEXES_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY_562.md  IMPLEMENTATION_SUMMARY_674_688.md  IMPLEMENTATION_SUMMARY_690.md  IMPLEMENTATION_SUMMARY_692.md  IMPLEMENTATION_SUMMARY_696.md  INCIDENT_WORKFLOW_IMPLEMENTATION.md  PR_562_DESCRIPTION.md  QUICK_REFERENCE_690.md  QUICK_REFERENCE_692.md  QUICK_REFERENCE_696.md  TODO.md  package.json
.github/workflows/: contracts-deploy.yml
backend/: .env.example  API_VERSIONING.md  BACKEND.md  DONATION_ATTRIBUTION_AND_FIXTURE_MANAGEMENT.md  README.md  WS-SECURITY-RECON.md  package-lock.json  package.json
backend/docs/: API_MIGRATION_NOTES_BLOOD_MATCHING.md
backend/src/: app.module.ts  data-source.ts  (+1 more)
docs/: disaster-recovery-drill-framework.md  slo-instrumentation-guide.md
lifebank-soroban/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  contracts.json
lifebank-soroban/contracts/fuzz/: Cargo.toml
lifebank-soroban/contracts/fuzz/tests/: fuzz_inventory.rs  fuzz_payments.rs
lifebank-soroban/tests/: Cargo.toml  integration_test.rs
lifebank-soroban/tests/test_snapshots/: test_full_allocation_to_delivery_workflow.1.json  test_rollback_after_settlement_is_rejected.1.json  test_rollback_releases_inventory_and_refunds_payment.1.json  test_rollback_with_pending_payment_does_not_refund.1.json  test_settle_without_confirm_delivery_is_rejected.1.json
scripts/: generate-bindings.sh
(+500 files in other folders)
